[FIX] website_event_{*}: harmonize spaces over online screens
*: exhibitor, meet, track

Before, there was a weird bar above left column of the track screen,
of a different color than the one over the content column. The side
column titles were not centered and aligned with content (for small
screens) and background color was used strangely as well as the
borders.

Harmonize the small space above meeting / exhibition / tracks
online screens. Add a small space above both columns, in small screens
as well (creating space between the blocks, having different purposes)
above online screens of meetings, ehibitors and tracks. Remove css that
can be removed and replace it with bootstrap standard classes.

The spaces uses the website background color. The side column title are
centered vertically and match the titles in the main column when the
screen is small.

Task-3006773

closes odoo/odoo#102120

--- a/addons/website_event_exhibitor/static/src/scss/event_exhibitor_templates.scss
+++ b/addons/website_event_exhibitor/static/src/scss/event_exhibitor_templates.scss
@@ -83,15 +83,17 @@
      */
 
     .o_wevent_online_page_container {
-        background-color: $o-wevent-bg-color-base;
-        color: $o-wevent-color;
-
         // Jitsi container
         #o_wsponsor_jitsi_iframe {
             height: 85vh;
         }
-
+        .o_wesponsor_exhibitor_main {
+            background-color: $o-wevent-bg-color-base;
+            color: $o-wevent-color;
+        }
         .o_wesponsor_exhibitor_aside {
+            background-color: $o-wevent-bg-color-base;
+            color: $o-wevent-color;
             .o_wesponsor_sponsor_name {
                 line-height: 1rem;
             }
